# torrent-player

./: noxfile.py  pyproject.toml
tests/: test_utils.py
torrent_player/: constants.py  main.py  process.py  torrent.py  tpb.py  utils.py  webtorrent.py
torrent_player/cli/: cli.py  colors.py
torrent_player/subtitles/: base.py  napi.py
