[tool.poetry]
name = "torrent-player"
version = "0.1.0"
description = ""
authors = ["lipowskm <m.lipowski95@gmail.com>"]
readme = "README.md"
packages = [{include = "torrent_player"}]

[tool.poetry.dependencies]
python = "^3.8, <3.12"
requests = "^2.28.2"
lxml = "^4.9.2"
torrentool = "^1.1.1"
rich = "^13.2.0"
charset-normalizer = "^3.0.1"
pylzma = "^0.5.0"
pywin32 = "^305"

[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-cov = "*"

[tool.poetry.group.nox.dependencies]
nox-poetry = "*"

[tool.poetry.group.type_check.dependencies]
mypy = "*"
types-requests = "^2.28.2"

[tool.poetry.group.lint.dependencies]
ruff = "*"

[tool.poetry.group.fmt.dependencies]
black = "*"
isort = "*"

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310"]

[tool.isort]
profile = "black"
line_length = 88
force_sort_within_sections = true
src_paths = ["torrent_player"]
skip_gitignore = true

[tool.mypy]
ignore_missing_imports = true
strict = true

[tool.ruff]
line-length = 88
select = ["E", "F"]
ignore = []
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
per-file-ignores = {}
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
target-version = "py310"

[tool.ruff.mccabe]
max-complexity = 10

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
